# kubin-rs

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ad1fkqvkbxhap0gpb688bgrad221lgwj-source  bfcgp0bwn9c4j7v509rvhmhvkjm3x36d-source  nvhwc4mqh2g8ycffbzv1bk69avi8dd5h-source
cube/: Cargo.toml
cube-macros/: Cargo.toml
cube-macros/src/: lib.rs
cube/src/: algorithms.rs  corner.rs  edge.rs  lib.rs  subcases.rs
gpu-cube/: Cargo.toml
gpu-cube/src/: app.rs  cam.rs  consts.rs  cube.rs  cubie.rs  depth_texture.rs  main.rs  state.rs  vertex.rs
gpu-cube/src/shaders/: main.wgsl
kubin-rs/: Cargo.toml
kubin-rs/src/: main.rs  scramble.rs
kubin-rs/src/solvers/: ida_solver.rs  mod.rs  solver.rs  utils.rs
kubin-rs/src/solvers/cfop/: cross.rs  f2l.rs  mod.rs  oll.rs  pll.rs
kubin-rs/src/solvers/cube_subsets/: co.rs  cp.rs  cross.rs  ep.rs  f2l.rs  free_f2l.rs  mod.rs  oll.rs  pll.rs
kubin-rs/src/solvers/methods/: cfop.rs  free_fop.rs  (+2 more)
solver/: Cargo.toml
solver/src/: lib.rs  main.rs  scramble.rs
solver/src/solvers/: ida_solver.rs  mod.rs  solver.rs  utils.rs
src/: lib.rs  main.rs  scramble.rs
src/cube/: algorithms.rs  corner.rs  edge.rs  mod.rs
src/solver/: cross.rs  f2l.rs  mod.rs  oll.rs  pll.rs
src/solvers/: mod.rs  solver.rs
src/solvers/cfop/: cross.rs  f2l.rs  mod.rs  oll.rs  pll.rs
src/solvers/cube_subsets/: cross.rs  f2l.rs  mod.rs  oll.rs  pll.rs
subcube-derive/: Cargo.toml
subcube-derive/src/: lib.rs
(+34 files in other folders)
