[package]
name = "gpu-cube"
version = "0.1.0"
edition = "2024"

[dependencies]
solver = { path = "../solver" }
cube = { path = "../cube" }
cube-macros = { path = "../cube-macros" }
anyhow = "1.0.98"
bytemuck = "1.23.1"
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"
